# earthquake-cencalvm

./: .gitignore  CHANGES  CHANGES.md  DISCLAIMER.md  INSTALL  INSTALL.md  Make.mm  Makefile  Makefile.am  README  README.md  TODO  check.am  code.json  configure.ac  configure_all.sh  configure_minimum.sh  subpackage.am  tidy.sh
applications/: Makefile.am
applications/average/: Makefile.am  avgcencalvm.cc  cencalvmavg.cc
applications/create/: Makefile.am  cencalvmgen.cc  cencalvmpack.cc  gencencalvm.cc  packcencalvm.cc
applications/query/: Makefile.am  cencalvminfo.cc  cencalvmisosurface.cc  cencalvmquery.cc
config/: Makefile.config  linux-gcc-3.x.def  linux-gcc.def  linux.def  rules-build.def  rules-c.def  rules-cpp.def  rules-export.def  rules-f77.def  rules-targets.def  rules-test.def  rules.def  variables-build.def  variables-c.def  variables-compiler.def  variables-cpp.def  variables-f77.def  variables-make.def  variables.def
config/compiler/gcc-3.x/: cpp.def  f77.def  portinfo
config/compiler/gcc-3.x-Darwin/: c.def  cpp.def  f77.def
config/os/: Darwin.def  linux.def
doc/: Make.mm  Makefile  Makefile.am  doxyconfig
docs/: _config.yml  api.md  examples.md  index.md  install.md  query.md
docs/_data/: navbar.yml
docs/_includes/: footer.html  page-banner.html
examples/: Makefile.am
examples/query/: Makefile.am  README
examples/query/c/: Makefile.am  cencalvmcquery.c
examples/query/cpp/: Makefile.am  cencalvmcppquery.cc
examples/query/data/: Makefile.am  README  sample-05.0.1_fixedres.out  sample-05.1.0_maxres.out  sample-05.1.x.in  sample-08.2.0_fixedres.out  sample-08.2.0_maxres.out  sample-08.2.0_waveres.out  sample-08.3.0_fixedres.out  sample-08.3.0_maxres.out  sample-08.3.0_waveres.out  sample_ext-05.1.0_maxres.out  sample_ext-08.2.0_fixedres.out  sample_ext-08.2.0_maxres.out  sample_ext-08.2.0_waveres.out  sample_ext-08.3.0_fixedres.out  sample_ext-08.3.0_maxres.out  sample_ext-08.3.0_waveres.out
examples/query/f77/: Makefile.am  cencalvmf77query.f
extensions/: Makefile.am  subpackage.am
extensions/applications/: Makefile.am
extensions/applications/vsgrader/: Makefile.am  VsGrader.cc  VsGrader.h  gradecencalvm.cc
extensions/cencalvm/: CenCalVMDB.py  Makefile.am  __init__.py
extensions/cencalvmdb/: Makefile.am
extensions/cencalvmdb/lib/: CenCalVMDB.cc  CenCalVMDB.h  CenCalVMDB.icc  Makefile.am
extensions/libsrc/: Makefile.am
extensions/libsrc/cencalvmdb/: CenCalVMDB.cc  CenCalVMDB.h  CenCalVMDB.icc  Makefile.am
extensions/libsrc/vsgrader/: VsGrader.icc
extensions/modulesrc/: CenCalVMDB.i  Makefile.am  cencalvm.i  cencalvm.pyxe.src
extensions/tests/: Makefile.am
extensions/tests/vsgrader/: Makefile.am  TestVsGrader.cc
extensions/tests/vsgrader/data/: Makefile.am
extensions/vsgrader/: Makefile.am
extensions/vsgrader/driver/: Makefile.am  gradecencalvm.cc
extensions/vsgrader/lib/: Makefile.am  VsGrader.cc  VsGrader.h  VsGrader.icc
extensions/vsgrader/tests/: Makefile.am  TestVsGrader.cc  TestVsGrader.h
extensions/vsgrader/tests/data/: Makefile.am  paramfile.txt
libsrc/: Makefile.am
libsrc/average/: Averager.cc  Averager.h  Averager.icc  AvgEngine.cc  Makefile.am
libsrc/cencalvm/: Makefile.am
libsrc/cencalvm/average/: Averager.cc  AvgEngine.h  Makefile.am
libsrc/cencalvm/create/: Makefile.am  VMCreator.icc
libsrc/cencalvm/query/: Makefile.am  VMQuery.cc  VMQuery.h  VMQuery.icc  cvmerror.h  cvmquery.cc  f77vmquery.cc  f77vmquery.h
libsrc/cencalvm/storage/: ErrorHandler.cc  ErrorHandler.h  ErrorHandler.icc  GeomCenCA.cc  GeomCenCA.h  Geometry.cc  Geometry.h  Makefile.am  Payload.h  Projector.cc  Projector.h  etreefwd.h  proj4fwd.h
libsrc/create/: GridIngester.h  GridIngester.icc  Makefile.am  VMCreator.cc  VMCreator.h
libsrc/query/: Makefile.am  README  VMQuery.cc  VMQuery.h  VMQuery.icc  cvmerror.cc  cvmquery.h  f77vmerror.h  f77vmquery.h
libsrc/storage/: GeomCenCA.cc  GeomCenCA.h  Geometry.h  Makefile.am  Payload.h
m4/: cit_python.m4
packager/: build.cfg  build.py  makefile_euclid_darwin  makefile_euclid_linux  setup_darwin.sh  setup_linux.sh  update_darwinlinking.py
pkgs/: Make.mm  Makefile.am
pkgs/average/: Make.mm
pkgs/average/driver/: Make.mm  Makefile.am  avgcencalvm.cc  local.def
pkgs/average/lib/: Averager.cc  Averager.h  Averager.icc  AvgEngine.cc  AvgEngine.h  Make.mm  Makefile.am  local.def
pkgs/average/tests/: Make.mm  Makefile.am  TestAverager.cc  TestAverager.h  local.def
pkgs/create/: Make.mm
pkgs/create/driver/: Make.mm  Makefile.am  gencencalvm.cc  local.def  packcencalvm.cc
pkgs/create/lib/: GridIngester.cc  GridIngester.h  Make.mm  Makefile.am  VMCreator.cc  VMCreator.h  VMCreator.icc  local.def
pkgs/create/tests/: Make.mm  Makefile.am  TestVMCreator.cc  TestVMCreator.h  local.def
pkgs/query/: Make.mm  Makefile  Makefile.am  README
pkgs/query/apps/: Make.mm  Makefile.am
pkgs/query/examples/: Make.mm  Makefile  Makefile.am  README
pkgs/query/lib/: Make.mm  Makefile.am  VMQuery.cc  VMQuery.h  VMQuery.icc
pkgs/query/liblang/: Make.mm  Makefile.am  cvmerror.h  cvmquery.cc  cvmquery.h  f77vmerror.cc  f77vmerror.h  f77vmquery.cc  f77vmquery.h  local.def
pkgs/query/tests/: Make.mm  Makefile.am  TestVMQuery.cc  TestVMQuery.h  local.def
pkgs/storage/: Make.mm  Makefile.am
pkgs/storage/lib/: ErrorHandler.cc  ErrorHandler.h  GeomCenCA.h  GeomCenCA.icc  Geometry.cc  Geometry.h  Geometry.icc  Make.mm  Makefile.am  Payload.cc  Payload.h  Projector.cc  Projector.h  etreefwd.h  proj4fwd.h
pkgs/storage/tests/: Make.mm  Makefile  Makefile.am  TestErrorHandler.cc  TestGeometry.cc  (+5 more)
tests/: Makefile.am
tests/average/: Makefile.am  TestAverager.cc
tests/average/data/: Makefile.am
tests/create/: Makefile.am  TestGridIngester.cc  TestGridIngester.h  TestVMCreator.cc  TestVMCreator.h
tests/create/data/: Makefile.am  paramfile.txt
tests/query/: Makefile.am  TestVMQuery.cc  TestVMQuery.h
tests/query/data/: Makefile.am
tests/storage/: Makefile.am  TestErrorHandler.cc  TestGeomCenCA.cc  TestGeomCenCA.h  TestGeometry.h
tests/storage/data/: Makefile.am
(+42 files in other folders)
