# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# ----------------------------------------------------------------------

SUBDIRS = \
	create \
	average \
	query


# End of file 
