# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

SUBDIRS = 

if ENABLE_SPATIAL
  SUBDIRS += cencalvmdb
endif

if ENABLE_VSGRADER
  SUBDIRS += vsgrader
endif

# End of file 
