# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# ----------------------------------------------------------------------

SUBDIRS = \
	libsrc \
	cencalvm \
	modulesrc \
	applications

if ENABLE_TESTING
  SUBDIRS += tests
endif


# End of file 
