# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# ----------------------------------------------------------------------

SUBDIRS = \
	storage \
	create \
	average \
	query


# End of file 
