# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

bin_PROGRAMS = avgcencalvm

avgcencalvm_SOURCES = \
	avgcencalvm.cc

INCLUDES = -I$(top_builddir)/include

avgcencalvm_LDADD = \
	$(top_builddir)/libsrc/libcencalvm.la


# End of file 
