# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# ----------------------------------------------------------------------
#

bin_PROGRAMS = avgcencalvm

avgcencalvm_SOURCES = \
	avgcencalvm.cc

AM_CPPFLAGS = -I$(top_srcdir)/libsrc

avgcencalvm_LDADD = \
	$(top_builddir)/libsrc/cencalvm/libcencalvm.la


# End of file 
