# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# ----------------------------------------------------------------------
#

bin_PROGRAMS = cencalvmavg

cencalvmavg_SOURCES = \
	cencalvmavg.cc

AM_CPPFLAGS = -I$(top_srcdir)/libsrc

cencalvmavg_LDADD = \
	$(top_builddir)/libsrc/cencalvm/libcencalvm.la


# End of file 
