# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

bin_PROGRAMS = cencalvminfo

cencalvminfo_SOURCES = \
	cencalvminfo.cc

cencalvminfo_LDFLAGS =

cencalvminfo_LDADD = \
	-letree


# End of file 
