# ======================================================================
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# ======================================================================

SUBDIRS = \
	data \
	cpp \
	c

if ENABLE_FORTRAN
SUBDIRS += f77
endif


# End of file 
