# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# ----------------------------------------------------------------------
#

SUBDIRS = 

if ENABLE_VSGRADER
  SUBDIRS += vsgrader
endif


# End of file 
