# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

nobase_pkgpyexec_PYTHON = \
	__init__.py \
	CenCalVMDB.py


# End of file 
