# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# ----------------------------------------------------------------------

nobase_pkgpyexec_PYTHON = \
	__init__.py \
	CenCalVMDB.py


# End of file 
